Fix navigation element overflow

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -176,6 +176,23 @@ footer{
     }
 }
 
+/* This way the navigation element do not overflow */
+@media all and (min-width:1250px) {
+    nav li a.links{
+        font-size: 18px;
+    }
+}
+@media all and (max-width: 990px) and (min-width:820px) {
+    nav li a.links{
+        font-size: 12px;
+    }
+}
+@media all and (max-width: 820px) {
+    nav li a.links{
+        font-size: 11px;
+    }
+}
+
 /* Overwrite some of the existing jQuery UI CSS */
 .ui-corner-all{
     .round_corners;
